Fixed really fucked up layout issue

--- a/styles.css
+++ b/styles.css
@@ -30,8 +30,6 @@ body {
     grid-auto-flow: row;
     grid-auto-rows: auto;
     align-content: start;
-    max-width: 100%;
-    overflow-x: hidden;
 }
 
 .page.main > .container {
